# stairDetection

./: CMakeLists.txt  README.md  main.cpp
include/: common.h
rs2/: CMakeLists.txt  realSense.cpp  realSense.h
stairperception/: StairPerception.cpp  StairPerception.hpp
